<resources>
    <string name="app_name">Android Developer Fundamentals</string>
    <string name="this_is_an_orange_textview">This is an orange TextView</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="i_accept_terms_and_conditions">I accept Terms and Conditions</string>
    <string name="submit">SUBMIT</string>
    <string name="long_text">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="happy_holidays">Happy Holidays!</string>
    <string name="from_andrei">From Andrei</string>
    <string name="gingles_bells">GINGLES BELLS</string>
    <string name="have_yourself_a_merry_little_christmas">Have yourself a merry little Christmas,</string>
    <string name="let_your_heart_be_light">Let your heart be light</string>
    <string name="from_now_on_our_troubles_will_be_out_of_sight">From now on, our troubles will be out of sight</string>
    <string name="let_it_snow">LET IT SNOW</string>
    <string name="todo">TODO</string>
    <string name="go_to_the_second_activity">Go to the second Activity.</string>
    <string name="go_to_the_first_activity">Go to the first activity.</string>
    <string name="first_text_passage">In a hut there lived a damp, ugly giant named Forest Williams. Not a deep silver, curvy hut, filled with toast and a giant smell, nor yet an enchanted, fake, killer hut with nothing in it to sit down on or to eat: it was a giant-hut, and that means warmth.One day, after a troubling visit from the goblin Chris Thomas, Forest leaves his hut and sets out in search of three greasy beans. A quest undertaken in the company of teens, pixies and cursed robots.In the search for the goblin-guarded beans, Forest Williams surprises even himself with his braveness and skill as a scout.During his travels, Forest rescues a sausage, an heirloom belonging to Chris. But when Chris refuses to try talking, their friendship is over.However, Chris is wounded at the Battle of Three Armies and the two reconcile just before Forest engages in some serious talking.Forest accepts one of the three greasy beans and returns home to his hut a very wealthy giant.</string>
    <string name="second_text_passage">The creepy, English town of Amsterdam holds a secret. Rob Chen has the perfect life working as a police officer in the city and dancing with his admirable boyfriend, Brad Sweet.However, when he finds a solid guillotine in his cellar, he begins to realise that things are not quite as they seem in the Chen family.A bar mitzvah leaves Rob with some startling questions about his past, and he sets off to dirty Amsterdam to find some answers.At first the people of Amsterdam are friendly and courageous. He is intrigued by the curiously brave homemaker, Nadine Gump. However, after she introduces him to hard social media, Rob slowly finds himself drawn into a web of adultery, fraud and perhaps, even cruelty.Can Rob resist the charms of Nadine Gump and uncover the secret of the solid guillotine before it\'s too late, or will his demise become yet another Amsterdam legend</string>
    <string name="third_text_passage">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In semper sem id arcu pulvinar, sed laoreet nisi mollis. Quisque laoreet felis a nisi euismod faucibus. Suspendisse potenti. Suspendisse condimentum velit arcu. Integer eget sagittis purus. Maecenas in nibh nisi. Suspendisse pellentesque mattis dictum. Morbi id ante non quam commodo mollis non sit amet enim.Maecenas vel elit vel ex gravida commodo. Praesent eu pharetra massa. Praesent hendrerit tempor velit, eu auctor tortor congue ut. Donec at dui posuere, interdum purus in, egestas ante. Aliquam tempus mi erat, efficitur egestas nisl lacinia a. Donec convallis vitae nisi ut sollicitudin. Vestibulum nunc metus, posuere in leo eget, pellentesque tempus sem. Nullam vel nulla vel tellus rhoncus porttitor in in enim. Sed in suscipit metus.Integer sit amet nisl nec arcu pellentesque aliquet sit amet non enim. Suspendisse sed posuere enim, non posuere enim. Duis commodo tincidunt pharetra. Donec porta lobortis augue ut rutrum. Cras euismod massa id lacus ullamcorper, et fringilla ligula porta. Integer a quam rhoncus, condimentum neque sed, volutpat tortor. In nec elit auctor, mollis odio et, efficitur nisl. Aliquam mauris metus, fringilla volutpat vulputate at, aliquet in purus. Sed porta felis mi, sed hendrerit erat sollicitudin id. Fusce quis malesuada est. Sed quis turpis scelerisque, efficitur elit aliquam, suscipit odio. Praesent vel tellus ex. Curabitur malesuada gravida dictum. Cras lacinia odio ac ligula accumsan viverra. Fusce fringilla ultrices nisl nec tempor. Phasellus at ligula et nisl suscipit venenatis iaculis quis nibh.Pellentesque lacinia purus vel odio facilisis euismod. Vestibulum ut velit risus. Praesent pharetra blandit ligula, id pulvinar nisl volutpat nec. Donec consectetur, ante ac placerat varius, velit arcu rutrum nisl, nec tempus arcu nisi a tortor. Aenean vitae feugiat dui. Nulla sed efficitur neque. Aliquam varius, justo ut vestibulum eleifend, ante ipsum ornare nibh, quis ultrices ante orci at est. Morbi vel suscipit est, vitae blandit odio. Vestibulum posuere in nunc vitae scelerisque. Suspendisse rhoncus dui vel dignissim vestibulum. Integer interdum viverra orci, sed cursus tellus luctus sed. Vivamus ut placerat elit.Mauris efficitur quam sapien, et porttitor mauris vulputate ut. Sed in tincidunt sem. Donec quis tempus mi. Nunc vitae tellus in dui porta bibendum. Ut varius faucibus aliquet. Cras eu feugiat tellus. Nulla justo turpis, sagittis sed nisl in, sollicitudin tempus diam. Etiam a feugiat mauris, eget lobortis odio. Praesent quis fermentum arcu. Aenean vehicula enim et diam ullamcorper faucibus in ac est. Suspendisse vitae sodales justo. Etiam consectetur egestas volutpat.</string>
    <string name="text_one">Text One</string>
    <string name="text_two">Text Two</string>
    <string name="text_three">Text Three</string>
    <string name="insert_a_link">Insert a link</string>
    <string name="open_website">Open website</string>
    <string name="insert_a_location">Insert a location</string>
    <string name="open_location">Open location</string>
    <string name="insert_text">Insert text</string>
    <string name="share_text">Share text</string>
    <string name="insert_a_phone_number">Insert a phone number</string>
    <string name="call">Call</string>
    <string name="reply_received">Reply received</string>
    <string name="message">Message</string>
    <string name="message_received">Message received</string>
    <string name="send">SEND</string>
    <string name="search_on_google">Search on google</string>
    <string name="presentation_activity_title">Android Developer Fundamentals</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_planner">Sport activity</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dota_2">DOTA 2</string>
    <string name="defense_of_the_ancients_2">Defense of the Ancients 2</string>
    <string name="title_activity_sports">SportsActivity</string>
    <string name="let_s_go">LET\'S GO</string>
    <string name="_7th_day">7th Day</string>
    <string name="book_seats">BOOK SEATS</string>
    <string name="event_listings">Event Listings</string>
    <string name="usain_bolt">Usain Bolt</string>
    <string name="open_date_time_picker">Open date time picker</string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="ok">ok</string>
    <string name="cancel">CANCEL</string>
    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="start_animation">Start Animation</string>
    <string name="alertdialog">AlertDialog</string>
</resources>